Modified api.yaml, added files for fleet section and refactored code
