# fleet.management/src/main/java/ro/agilehub/javacourse/car/hire/fleet/controller/mapper/CarMapperController.java
@@ -1,0 +1,14 @@
+package ro.agilehub.javacourse.car.hire.fleet.controller.mapper;
+
+import org.mapstruct.Mapper;
+import ro.agilehub.javacourse.car.hire.api.model.CarDTO;
+import ro.agilehub.javacourse.car.hire.fleet.domain.CarDO;
+
+@Mapper(componentModel = "spring")
+public interface CarMapperController {
+
+    CarDO dtoToDomainObject(CarDTO carDTO);
+
+    CarDTO domainObjectToDTO(CarDO carDO);
+
+}
